--- a/ui/style/main-style.css
+++ b/ui/style/main-style.css
@@ -4,14 +4,35 @@
 
 img {
     width: 100%;
+    
 }
 
 .link {
     text-decoration: none;
     text-align: center;
-    color: #000;
+    color: rgb(255, 255, 255);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:larger;
+    
 }
 
+.link2 {
+    color: #000;
+    text-decoration: none;
+    text-align: center;
+    font-family:'Courier New';
+    font-style: italic;
+    font-size: large;
+}
+.link:hover {
+    color: yellow;
+    transition: color .3s ease-in;
+
+}
+body {
+    background-color: #000;
+
+}
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -20,63 +41,40 @@ img {
     max-width: 1200px;
     margin: 0 auto;
     gap: 25px;
+   
+}
+.polaroid:hover .slide {
+    transform: scale(1.1);
+    transition: transform .3s ease;
+
 }
 
 .content {
     width: 240px;
     overflow: hidden;
 }
-
-
-/*Artist*/
-.container-artist {
-    flex-direction: column;
-}
-
-.wrapper-content {
-    display: flex;
-    justify-content: space-around;
+.polaroid {
+    display: inline-block;
+    border: 1px solid #ccc;
+    padding: 10px;
+    background-color: #fff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    margin: 10px;
+    position: relative;
+  }
+  .polaroid img {
+    display: block;
     width: 100%;
-    /* gap: 25px; */
-}
-
-.mini-header {
-    display: flex;
-    justify-content: space-between;
+    height: auto;
+  }
+  .polaroid .caption {
+    position: absolute;
+    bottom: 0;
+    left: 0;
     width: 100%;
-    margin-top: 20px;
-}
-
-.key-tour {
-    font-weight: 700;
-    text-transform: uppercase;
-}
-
-.link-back {
-    display: flex;
-    /* justify-content: center; */
-    align-items: center;
-}
-
-.link-back svg {
-    margin-right: 10px;
-    
-}
-
-.link-back:hover {
-    color: yellow;
-    transition: color .3s ease-in;
-}
-.link-back:hover svg {
-    fill: yellow;
-    transition: fill 1s ease;
-}
-
-.link-back:hover svg {
-    transform: translateX(-10px);
-    transition: transform .3s ease-in;
-}
-
-.header-artist {
-    margin: 0;
-}
+    background-color: #fff;
+    text-align: center;
+    padding: 10px;
+  }
+  
+  
