--- a/ui/style/artist.css
+++ b/ui/style/artist.css
@@ -1,18 +1,25 @@
 body {
-    background-color: white ;
+    background-color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
+
 .link {
     text-decoration: none;
     text-align: center;
     color: rgb(0, 0, 0);
     font-family: Arial, Helvetica, sans-serif;
-    font-size:larger;
-    
+    font-size: larger;
+
 }
+
 .container-artist {
     flex-direction: column;
-    
+
 }
+
 .wrapper-content {
     display: flex;
     justify-content: space-around;
@@ -27,19 +34,33 @@ body {
 }
 
 .header-artist {
-    margin: 0;
+    margin: 1;
     text-align: center;
 }
+
 img {
     display: block;
-      margin: 0 auto;
-      width: 20%;
-    
+    margin: 0 auto;
+    width: 20%;
+
 }
+
 
 
 .link:hover {
     color: rgb(0, 140, 255);
     transition: color .3s ease-in;
+
+}
+
+.members {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: larger;
+
+}
+
+.tours {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: larger;
 
 }
