--- a/ui/style/main-style.css
+++ b/ui/style/main-style.css
@@ -7,18 +7,19 @@
     text-align: center;
     color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
-    font-size:larger;
-    
+    font-size: larger;
+
 }
 
 .link2 {
     color: #000;
     text-decoration: none;
     text-align: center;
-    font-family:'Courier New';
+    font-family: 'Courier New';
     font-style: italic;
     font-size: large;
 }
+
 .link:hover {
     color: yellow;
     transition: color .3s ease-in;
@@ -29,6 +30,7 @@ body {
     background-color: #000;
 
 }
+
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -37,11 +39,11 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     gap: 25px;
-   
+
 }
+
 .polaroid:hover .slide {
     transform: scale(1.1);
-    transition: transform .3s ease;
 
 }
 
@@ -49,21 +51,31 @@ body {
     width: 240px;
     overflow: hidden;
 }
+
+.slide {
+    min-height: 220px;
+    min-width: 220px;
+
+    transition: transform .3s ease;
+}
+
 .polaroid {
     display: inline-block;
     border: 1px solid #ccc;
     padding: 10px;
     background-color: #fff;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 10px 0px 10px rgba(255, 255, 255, 0.2);
     margin: 10px;
     position: relative;
-  }
-  .polaroid img {
+}
+
+.polaroid img {
     display: block;
     width: 100%;
     height: auto;
-  }
-  .polaroid .caption {
+}
+
+.polaroid .caption {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -71,11 +83,4 @@ body {
     background-color: #fff;
     text-align: center;
     padding: 10px;
-  }
-  
-  .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 5%;
-  }
+}
