--- a/ui/templates/error.html
+++ b/ui/templates/error.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Groupie-Tracker</title>
 </head>
 <body>
-    <p>Groupie tracker</p>
-    <div>
+    <header class="header">
+        <a class="link" href="/">
+            <h1>Groupie - Tracker</h1>
+        </a>
+    </header>
         {{.Code}}{{.Message}}
     </div>
-    <a href="/"> go home </a>
 </body>
