--- a/ui/templates/artist.html
+++ b/ui/templates/artist.html
@@ -19,7 +19,7 @@
     </div>
     <div class="content">
 
-        <img src="{{.Image}}" class="center">
+        <img src="{{.Image}}">
         </a>
     </div>
     <div class="wrapper-content">
