--- a/ui/style/artist.css
+++ b/ui/style/artist.css
@@ -1,63 +1,80 @@
 body {
-    background-color: white;
+    background-color: black;
+}
 
+.titleTextArtist {
+  margin-top: 50px;
+  text-align: center;
+  width: 100%;
+  background-repeat: no-repeat;
+  color: white;
+  white-space: nowrap;
+  position:relative;
+  font-size: 95px;
+  font-weight: bold;
+  text-shadow: 5px 5px 5px black;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.artist_box{
+  padding-top:100px;
+  max-width: 1200px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  color: black;
+  font-family: 'Courier New';
+  font-style: italic;
+  font-size: large; 
+  
+}
+
+.artist_title{
+  padding: 20px;
+  margin-bottom: 5px;
+  background-color: white;
+  border-radius:20px;
+}
+
+.artist_data img {
+  box-shadow: 0 0 2px 2px grey;
+  width: 300px;
+  border-radius:50%;
+}
+
+ h2{
+  text-align: center;
+  color:#ffffff;
+  font-size:  30px;
+ }     
+summary {
+  color: #ddd;
+  padding: 2px 6px;
+  width: 15em;
+  background-color: #292929;
+  border: none;
+  box-shadow: 3px 3px 4px black;
+  cursor: pointer;
+  
+}
+
+h4{
+  display: block;
+  font-family: 'Courier New';
+  font-style: italic;
+  font-size: large;
 }
 
 .link {
     text-decoration: none;
     text-align: center;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
     font-size: larger;
 
 }
-
-.container-artist {
-    flex-direction: column;
-
-}
-
-.wrapper-content {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    /* gap: 25px; */
-}
-
-.key-tour {
-    font-weight: 700;
-    text-transform: uppercase;
-    
-}
-
-.header-artist {
-    margin: 1;
-    text-align: center;
-}
-
-img {
-    display: block;
-    margin: 0 auto;
-    width: 10%;
-
-}
-
-
-
 .link:hover {
-    color: rgb(0, 140, 255);
+    color: yellow;
     transition: color .3s ease-in;
-
-}
-
-.members {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: larger;
-
-}
-
-.tours {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: larger;
 
 }
