--- a/ui/templates/error.html
+++ b/ui/templates/error.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/ui/style/error.css">
     <title>Groupie-Tracker</title>
 </head>
 <body>
@@ -12,6 +13,6 @@
             <h1>Groupie - Tracker</h1>
         </a>
     </header>
-        {{.Code}}{{.Message}}
+    <p class="status-err"> {{.Code}}{{.Message}}</p>
     </div>
 </body>
